--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@svgr/webpack": "^4.3.1",
-    "antd": "^3.20.7",
     "apollo-boost": "^0.4.3",
     "apollo-client": "^2.6.3",
+    "apollo-link": "^1.2.12",
+    "apollo-link-http": "^1.5.15",
+    "apollo-link-ws": "^1.0.18",
+    "apollo-server": "^2.7.2",
+    "apollo-utilities": "^1.3.2",
     "autoprefixer": "^8.2.0",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.0-beta.2",
     "babel-plugin-syntax-class-properties": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -33,6 +38,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "connect-history-api-fallback": "^1.5.0",
+    "cookie-parser": "^1.4.4",
     "copy-webpack-plugin": "^4.5.1",
     "cors": "^2.8.5",
     "cryptaddress-validator": "^1.1.1",
@@ -42,14 +48,22 @@
     "express": "^4.16.3",
     "express-graphql": "^0.9.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^4.2.0",
+    "gql-merge": "0.0.6",
     "graphql": "^14.4.2",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^4.0.5",
     "handlebars": "^4.1.2",
     "html-webpack-plugin": "^3.1.0",
+    "http": "0.0.0",
+    "image-webpack-loader": "^5.0.0",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
     "mongoose": "^5.0.11",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.8.1",
     "nodemon": "^1.17.2",
     "postcss-loader": "^2.1.3",
@@ -65,7 +79,9 @@
     "react-router-dom": "^4.2.2",
     "reactstrap": "^8.0.0",
     "sass-loader": "^6.0.7",
+    "sha.js": "^2.4.11",
     "style-loader": "^0.20.3",
+    "subscriptions-transport-ws": "^0.9.16",
     "uniqid": "^5.0.3",
     "url-loader": "^2.0.1",
     "validate.js": "^0.13.1",
