--- a/package.json
+++ b/package.json
@@ -108,6 +108,10 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addons": "^5.1.11",
+    "@storybook/react": "^5.1.11",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.1",
     "@types/react": "^16.8.23",
@@ -119,6 +123,7 @@
     "eslint-plugin-react": "^7.14.2",
     "prettier": "^1.18.2",
     "source-map-loader": "^0.2.4",
+    "storybook-addon-material-ui": "^0.9.0-alpha.20",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3"
   }
