--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "start": "webpack -p --progress --profile --colors && node server",
     "start:dev": "node server",
     "server": "nodeman --exec babel-node ./server/start.js",
-    "prettier": "prettier --write \"**/*.{js,jsx}\""
+    "prettier": "prettier --write \"**/*.{js,jsx}\"",
+    "test": "NODE_ENV=test jest --pass-with-no-tests",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "storybook": "start-storybook -p 9001 -s ./ -c .storybook",
+    "lint": "eslint .",
+    "lintfix": "eslint . --config .eslintrc.json --fix"
   },
   "engines": {
     "node": ">=6"
@@ -117,10 +123,15 @@
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "babel-eslint": "^10.0.2",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "source-map-loader": "^0.2.4",
     "storybook-addon-material-ui": "^0.9.0-alpha.20",
