--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/preset-react": "^7.0.0-beta.42",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "@svgr/webpack": "^4.3.1",
     "apollo-boost": "^0.4.3",
     "apollo-client": "^2.6.3",
