--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["es2015", "dom"],
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "outDir": "./dist/",
     "noImplicitAny": false,
     "module": "es6",
@@ -9,15 +12,31 @@
     "allowJs": true,
     "baseUrl": ".",
     "moduleResolution": "node",
-    "typeRoots": ["./typings"],
+    "typeRoots": [
+      "./typings"
+    ],
     "paths": {
-      "app/*": ["client/app/*"],
-      "assets/*": ["client/public/assets/*"],
-      "enums/*": ["client/app/enums/*"],
-      "interfaces/*": ["client/app/interfaces/*"],
-      "validation/": ["client/app/validation/index.ts"],
-      "shared/": ["shared/*"],
-      "/*": ["/*"]
+      "app/*": [
+        "client/app/*"
+      ],
+      "assets/*": [
+        "client/public/assets/*"
+      ],
+      "enums/*": [
+        "client/app/enums/*"
+      ],
+      "interfaces/*": [
+        "client/app/interfaces/*"
+      ],
+      "validation/": [
+        "client/app/validation/index.ts"
+      ],
+      "shared/": [
+        "shared/*"
+      ],
+      "/*": [
+        "/*"
+      ]
     },
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true
